--- a/templateP5/index.html
+++ b/templateP5/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <!-- link the p5 library -->
     <script src="lib/p5.js"></script>
+    <!-- link the p5 SOUND library -->
+    <script src="lib/p5.sound.js"></script>
 </head>
 <body>
     
     <p>here is going to be a p5 canvas soon</p>
 
     <div id="canvasWrapper"></div>
+    
     <p>above you see my canvas</p>
 
 
