--- a/confettis/index.html
+++ b/confettis/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <p>CONFETTIS - DYNAMIC Arrays</p>
+    <p>Week 9.2 CONFETTIS - DYNAMIC Arrays</p>
 
     <p>✨🎉 click to make confetti ✨🎉</p>
 
