--- a/interactiveObjects/index.html
+++ b/interactiveObjects/index.html
@@ -16,7 +16,7 @@
 
     <div id="canvasWrapper"></div>
     
-    <p>above you see my canvas</p>
+    <p>click the faces to make them angry...and disappear</p>
 
 
     <!-- the js file should be included as the last thing in the body -->
